# xxtea-nostd

./: Cargo.toml  README.md
examples/: example.rs
src/: lib.rs
